Fix quote on small screens

--- a/assets/component-quote.css
+++ b/assets/component-quote.css
@@ -21,6 +21,12 @@
   }
 }
 
+@media screen and (max-width: 375px) {
+    .quote-text h3 {
+        font-size: 1.5rem;
+  }
+}
+
 .quote-text h3 {
     letter-spacing: 0.2em;
     text-transform: uppercase;
